JumpScript/tests/baselines/reference/classExtendingQualifiedName.errors.txt
tests/cases/compiler/classExtendingQualifiedName.jump(5,23): error TS2339: Property 'C' does not exist on type 'typeof M'.


==== tests/cases/compiler/classExtendingQualifiedName.jump (1 errors) ====
    module M {
        class C {
        }
    
        class D extends M.C {
                          ~
!!! error TS2339: Property 'C' does not exist on type 'typeof M'.
        }
    }